Implement getAccountOverviewById()
